<resources>
    <string name="app_name">SwipeProducts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_products">Add Products</string>
    <string name="products">Products</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="product_tax">Product Tax</string>
    <string name="product_type">Product Type</string>
    <string name="product_has_been_posted">Product has been posted!</string>
    <string name="ok">OK</string>
    <string name="please_turn_on_your_internet_for_posting_products">Please turn on your internet for posting products!</string>
    <string name="add_productss">Add Products</string>
    <string name="please_turn_on_your_internet_for_fetching_products">Please turn on your internet for fetching products!</string>
</resources>