<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.add_products.AddProductsFragment">

    <TextView
        android:id="@+id/tvProducts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_productss"
        android:fontFamily="@font/title_medium"
        android:textSize="@dimen/_23ssp"
        android:textColor="@color/orange"
        android:layout_margin="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <LinearLayout
        android:id="@+id/llNoInternet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        >
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:id="@+id/no_internet_view"
            android:visibility="visible"
            app:lottie_rawRes="@raw/no_internet"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_turn_on_your_internet_for_posting_products"
            android:fontFamily="@font/title_medium"
            android:textSize="@dimen/_15ssp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/orange"
            />
    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:id="@+id/animation_view"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvProducts"
        app:lottie_rawRes="@raw/addproducts"
        app:lottie_autoPlay="true"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintBottom_toTopOf="@id/llAddingProducts"
        app:lottie_loop="true"/>
    <LinearLayout
        android:visibility="visible"
        android:id="@+id/llAddingProducts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_products_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:padding="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@id/btnAddProduct"
        app:layout_constraintTop_toBottomOf="@id/animation_view"
        android:layout_marginTop="@dimen/_15sdp"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilProductName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_1sdp"
            app:boxCornerRadiusBottomEnd="@dimen/_13sdp"
            app:boxCornerRadiusBottomStart="@dimen/_13sdp"
            app:boxCornerRadiusTopEnd="@dimen/_13sdp"
            app:boxCornerRadiusTopStart="@dimen/_13sdp"
            app:cursorColor="@color/orange"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/orange">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etProductName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_7sdp"
                android:hint="@string/product_name"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:id="@+id/tilProductType"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_weight="0.5"
            app:boxCornerRadiusBottomEnd="@dimen/_13sdp"
            app:boxCornerRadiusBottomStart="@dimen/_13sdp"
            app:boxCornerRadiusTopEnd="@dimen/_13sdp"
            app:boxCornerRadiusTopStart="@dimen/_13sdp"
            app:cursorColor="@color/orange"
            app:hintTextColor="@color/orange">

            <AutoCompleteTextView
                android:id="@+id/etProductType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_type" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            >
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:id="@+id/tilProductPrice"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_1sdp"
                app:boxCornerRadiusBottomEnd="@dimen/_13sdp"
                android:layout_weight="0.5"
                app:boxCornerRadiusBottomStart="@dimen/_13sdp"
                app:boxCornerRadiusTopEnd="@dimen/_13sdp"
                app:boxCornerRadiusTopStart="@dimen/_13sdp"
                app:cursorColor="@color/orange"

                app:endIconMode="clear_text"
                app:hintTextColor="@color/orange">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etProductPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/_7sdp"
                    android:hint="@string/product_price"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:id="@+id/tilProductTax"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_1sdp"
                app:boxCornerRadiusBottomEnd="@dimen/_13sdp"
                android:layout_weight="0.5"
                app:boxCornerRadiusBottomStart="@dimen/_13sdp"
                app:boxCornerRadiusTopEnd="@dimen/_13sdp"
                app:boxCornerRadiusTopStart="@dimen/_13sdp"
                app:cursorColor="@color/orange"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/orange">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etProductTax"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/_7sdp"
                    android:hint="@string/product_tax"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:id="@+id/cvAddImage"
            android:layout_width="@dimen/_85sdp"
            android:layout_height="@dimen/_85sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_3sdp"
            android:elevation="@dimen/_2sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_gravity="center"
            app:cardUseCompatPadding="true"
            >
            <ImageView
                android:id="@+id/ivProduct"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/baseline_add_photo_alternate_24"
                android:scaleType="centerCrop"
                android:background="@android:color/transparent" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:visibility="visible"
        android:id="@+id/btnAddProduct"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llAddingProducts"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/_5sdp"
        android:backgroundTint="@color/orange"
        android:text="Add Product"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:cornerRadius="@dimen/_8sdp" />

</androidx.constraintlayout.widget.ConstraintLayout>